--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ body {
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     margin-right: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .start-button:hover {
@@ -48,27 +50,37 @@ body {
     text-shadow: #21751f 0 0 5px;
 }
 
+/* Window base styles */
 .window {
     position: absolute;
     background-color: #ffffff;
     border: 1px solid #999999;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+/* About window */
+.window:first-child {
     width: 400px;
     height: 400px;
-}
-
-/* Positioning for first window */
-.window:first-child {
-    left: calc(50% - 420px);
+    left: calc(50% - 300px);
+    top: 40%;
     transform: translateY(-50%);
-    top: 50%;
 }
 
-/* Positioning for second window */
+/* Webring window */
 .window:nth-child(2) {
-    left: calc(50% + 20px);
-    transform: translateY(-50%);
+    width: 150px;
+    height: 100px;
+    right: 20px;
+    top: 20px;
+}
+
+/* Image window */
+.window:nth-child(3) {
+    width: 400px;
+    height: 400px;
+    left: calc(50% - 50px);
     top: 50%;
 }
 
@@ -159,7 +171,7 @@ body {
 
 .program-entry {
     background: linear-gradient(to bottom, #6b9fff 1%, #4177e6 15%, #2e62c7 100%);
-    height: 80%;
+    height: 100%;
     padding: 0 15px;
     margin: 0 2px;
     display: flex;
@@ -201,10 +213,16 @@ body {
 .desktop {
     padding: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, 80px);
-    gap: 20px;
+    grid-template-columns: repeat(2, 80px);
+    grid-template-rows: auto 1fr auto auto;  /* Four rows: top icons, space, and two bottom links */
+    gap: 10px;
     height: calc(100vh - 5vh);
+    justify-content: start;
 }
+
+
+
+
 
 .app {
     width: 80px;
@@ -216,6 +234,7 @@ body {
     align-items: center;
     padding: 5px;
     border-radius: 5px;
+    height: 90px;
 }
 
 .app:hover {
